src/App.scss
* {
  font-family: sans-serif;
  box-sizing: border-box;
}

body {
  margin: 0;
  // overflow-y: hidden;
}
.outer {
  height: 100vh;
  width: 100%;
  overflow-y: auto;
  background-image: url("/assets/background.png");
  display: flex;
  background-size: cover;
  background-attachment: local;
  background-position: top;
  background-repeat: no-repeat;
  flex-direction: column;
  overflow-x: hidden;
  min-width: 1130px;
}

.mobile_wrapper {
  background-image: url("./assets/mobileBackground.png");
  background-size: cover;
  background-position: top;
  background-repeat: no-repeat;
  height: 100vh;
  overflow-y: scroll;
  overflow-x: hidden;
  width: 100%;

  #mobile_header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: sticky;
    top: 0;
    width: 100%;
    height: 52px;
    padding: 0 5%;
    z-index: 10;
    background-color: #3c3d43;
    img {
      width: 46.21px;
      height: 32px;
    }

    .buttonRow {
      display: flex;
      align-items: center;
      button {
        width: 80px;
        height: 32px;
        padding: 6px 9px;
        border-radius: 999px;
        background-color: #aeffc1;
        font-size: 14px;
        font-weight: 500;
        line-height: 19.6px;
        letter-spacing: -0.7px;
        border: none;
        margin-right: 24px;
      }

      #beta-button {
        background-color: transparent;
        border: 1.3px solid #58ff7d;
        color: #aeffc1;
        width: 82px;
        margin-right: 8px;
      }

      p {
        color: #ffffff;
        font-size: 17px;
        cursor: pointer;
      }
    }
  }
  .safe_header {
    height: 52px;
  }
}

.not-found {
  color: #aeffc1;
  font-size: large;
  font-weight: 600;
  display: flex;
  justify-content: center;
  margin-top: 100px;
}

